I#63 - [CalDAV/CardDAV] Incorrectly thinks an object is created in offline

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/63